--- a/lib/_colors-dark.scss
+++ b/lib/_colors-dark.scss
@@ -25,6 +25,8 @@
   --dark-on-error: #000;
   --dark-warning: #c1b263;
   --dark-on-warning: #000;
+  --dark-info: #64a6c5;
+  --dark-on-info: #fff;
   --dark-success: #8ac565;
   --dark-on-success: #000;
 
