--- a/lib/_colors-light.scss
+++ b/lib/_colors-light.scss
@@ -27,6 +27,8 @@
   --light-on-error: #fff;
   --light-warning: #ffd600;
   --light-on-warning: #000;
+  --light-info: #03a9f4;
+  --light-on-info: #fff;
   --light-success: #55dd00;
   --light-on-success: #000;
 
